fix: Fixed Mobile Overflow of Pagination Buttons
* fix: removed margin bottom for proper spacing

* fix: added style to fix pagination buttons overflow on mobile

* undone all changes prittier fomater did

* fix: Fixed Mobile Overflow of Pagination Buttons

--- a/isa/static/css/main.css
+++ b/isa/static/css/main.css
@@ -175,6 +175,14 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
     justify-content: space-around;
     margin-bottom: 30px;
 }
+@media (max-width: 576px) {
+  .pagination {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+}
 .stat-label {
     min-width: 150px;
     border: 1px solid transparent;
@@ -418,12 +426,8 @@ select.selectpicker> option, .nav-item.dropdown .dropdown-menu  {
 
 /*allow absolute position for publish btns*/
 .edit-box-header {
-    position:relative;
+    position:relative
     }
-.edit-box-header-nav {
-    margin-bottom: 10px;
-    display: flex;       
-}
 
 /*place publish btn top right of edit box*/
 .edit-publish-btn-group {
